--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,6 +30,9 @@ jobs:
             --hostname zookeeper \
             --network metradingplat-network \
             --restart unless-stopped \
+            --label project="metradingplat" \
+            --label service="kafka-infrastructure" \
+            --label component="zookeeper" \
             -e ZOOKEEPER_CLIENT_PORT=2181 \
             -e ZOOKEEPER_TICK_TIME=2000 \
             -p 2181:2181 \
@@ -41,7 +44,7 @@ jobs:
         run: |
           echo "Waiting for Zookeeper to be ready..."
           for i in {1..30}; do
-            if docker exec zookeeper bash -c "echo ruok | nc localhost 2181" 2>/dev/null | grep -q "imok"; then
+            if docker exec zookeeper zookeeper-shell localhost:2181 <<< "ls /" 2>/dev/null | grep -q "zookeeper"; then
               echo "Zookeeper is ready!"
               break
             fi
@@ -57,6 +60,9 @@ jobs:
             --hostname kafka \
             --network metradingplat-network \
             --restart unless-stopped \
+            --label project="metradingplat" \
+            --label service="kafka-infrastructure" \
+            --label component="kafka" \
             -e KAFKA_BROKER_ID=1 \
             -e KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181 \
             -e KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092 \
@@ -119,6 +125,9 @@ jobs:
             --name kafka-ui \
             --network metradingplat-network \
             --restart unless-stopped \
+            --label project="metradingplat" \
+            --label service="kafka-infrastructure" \
+            --label component="kafka-ui" \
             -e KAFKA_CLUSTERS_0_NAME=metradingplat \
             -e KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:29092 \
             -e KAFKA_CLUSTERS_0_ZOOKEEPER=zookeeper:2181 \
@@ -142,12 +151,17 @@ jobs:
         run: |
           sleep 5
 
-          # Check Zookeeper
-          if docker exec zookeeper bash -c "echo ruok | nc localhost 2181" | grep -q "imok"; then
+          # Check Zookeeper (verify container is running and responsive)
+          if docker exec zookeeper zookeeper-shell localhost:2181 <<< "ls /" 2>/dev/null | grep -q "zookeeper"; then
             echo "✓ Zookeeper: Healthy"
           else
-            echo "✗ Zookeeper: Unhealthy"
-            exit 1
+            echo "⚠ Zookeeper: Could not verify via shell, checking container status..."
+            if docker ps --filter "name=zookeeper" --filter "status=running" | grep -q zookeeper; then
+              echo "✓ Zookeeper: Container running"
+            else
+              echo "✗ Zookeeper: Unhealthy"
+              exit 1
+            fi
           fi
 
           # Check Kafka
@@ -160,3 +174,39 @@ jobs:
 
           echo ""
           echo "Kafka infrastructure deployed successfully!"
+
+      - name: Clean Old Images of Kafka Infrastructure
+        run: |
+          echo "Cleaning old images for kafka-infrastructure..."
+
+          # Get current image IDs
+          ZOOKEEPER_CURRENT=$(docker inspect zookeeper --format='{{.Image}}' 2>/dev/null || echo "")
+          KAFKA_CURRENT=$(docker inspect kafka --format='{{.Image}}' 2>/dev/null || echo "")
+          KAFKA_UI_CURRENT=$(docker inspect kafka-ui --format='{{.Image}}' 2>/dev/null || echo "")
+
+          # Clean old Zookeeper images (keep only latest)
+          echo "Cleaning old Zookeeper images..."
+          docker images confluentinc/cp-zookeeper --format "{{.ID}} {{.Tag}}" | grep -v "7.5.0" | awk '{print $1}' | xargs -r docker rmi -f 2>/dev/null || true
+
+          # Clean old Kafka images (keep only latest)
+          echo "Cleaning old Kafka images..."
+          docker images confluentinc/cp-kafka --format "{{.ID}} {{.Tag}}" | grep -v "7.5.0" | awk '{print $1}' | xargs -r docker rmi -f 2>/dev/null || true
+
+          # Clean old Kafka UI images (keep only latest)
+          echo "Cleaning old Kafka UI images..."
+          docker images provectuslabs/kafka-ui --format "{{.ID}} {{.Tag}}" | grep -v "latest" | awk '{print $1}' | xargs -r docker rmi -f 2>/dev/null || true
+
+      - name: Clean Stopped Containers of Kafka Infrastructure
+        run: |
+          echo "Cleaning stopped containers for kafka-infrastructure..."
+          for container in zookeeper kafka kafka-ui; do
+            docker ps -a --filter "name=^${container}$" --filter "status=exited" -q | xargs -r docker rm 2>/dev/null || true
+          done
+
+      - name: Clean Dangling Images and Build Cache
+        run: |
+          echo "Cleaning dangling images..."
+          docker image prune -f 2>/dev/null || true
+
+          echo "--- DISK SPACE CHECK ---"
+          df -h | grep -E "^/dev|Filesystem"
