perf: limitar heap Kafka/ZK, reducir retención logs a 24h

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,11 @@ services:
       - metradingplat-network
     ports:
       - "2181:2181"
+    mem_limit: 256m
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
+      ZOOKEEPER_HEAP_OPTS: "-Xms64m -Xmx128m"
     volumes:
       - zookeeper_data:/var/lib/zookeeper/data
       - zookeeper_log:/var/lib/zookeeper/log
@@ -31,6 +33,7 @@ services:
     ports:
       - "9092:9092"
       - "29092:29092"
+    mem_limit: 768m
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -41,8 +44,12 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
-      KAFKA_LOG_RETENTION_HOURS: 168
-      KAFKA_LOG_RETENTION_BYTES: 1073741824
+      KAFKA_LOG_RETENTION_HOURS: 24
+      KAFKA_LOG_RETENTION_BYTES: 268435456
+      KAFKA_HEAP_OPTS: "-Xms128m -Xmx512m"
+      KAFKA_LOG_SEGMENT_BYTES: 67108864
+      KAFKA_NUM_PARTITIONS: 1
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 1
     volumes:
       - kafka_data:/var/lib/kafka/data
     depends_on:
@@ -62,6 +69,7 @@ services:
       - metradingplat-network
     ports:
       - "8090:8080"
+    mem_limit: 256m
     environment:
       KAFKA_CLUSTERS_0_NAME: metradingplat
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:29092
