--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,12 @@ services:
       KAFKA_LOG_SEGMENT_BYTES: 67108864
       KAFKA_NUM_PARTITIONS: 1
       KAFKA_DEFAULT_REPLICATION_FACTOR: 1
+      # Limitar hilos internos para CPU de 2 cores
+      KAFKA_NUM_IO_THREADS: 2
+      KAFKA_NUM_NETWORK_THREADS: 2
+      KAFKA_BACKGROUND_THREADS: 2
+      KAFKA_LOG_CLEANER_THREADS: 1
+      KAFKA_NUM_REPLICA_FETCHERS: 1
     volumes:
       - kafka_data:/var/lib/kafka/data
     depends_on:
